[package]
name = "browseraft"
version = "0.1.0"
authors = ["Elliott Clarke <ecclarke42@gmail.com>"]
edition = "2018"
repository = "https://github.com/ecclarke42/browseraft-rs"
license = "MIT"
description = "A rust implementation of raft for the browser, using a BroadcastChannel for RPC"

[dependencies]
gloo = "0.2.1"
rand = { version = "0.6", features = ["wasm-bindgen"]}
serde = { version = "1", features = ["derive"]}
serde_json = "1"
wasm-bindgen = { version = "0.2.42", features = ["serde-serialize"]}
web-sys = {version = "0.3", features = ["console", "BroadcastChannel", "MessageEvent"]}

[workspace]
members = ["examples/*"]