[package]
name = "multiworker"
version = "0.1.0"
authors = ["Elliott Clarke <elliott.clarke.ext@siemens-energy.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
browseraft = {path = "../../"}

rand = { version = "0.6", features = ["wasm-bindgen"]}
serde = {version = "1", features = ["derive"]}
yew = "*"